dark mode fix and yung lean

--- a/themes/psychicwound/static/css/style.css
+++ b/themes/psychicwound/static/css/style.css
@@ -23,8 +23,10 @@
         filter: brightness(0) saturate(100%) invert(99%) sepia(5%) saturate(1030%) hue-rotate(10deg) brightness(111%) contrast(86%);
     }
 
-    #postMeta ul li {
-        background-color: rgba(18, 18, 18, .5);
+    #postMeta ul {
+        li {
+            background-color: #3d3d3d50 !important;
+        }
     }
 }
 
@@ -249,7 +251,7 @@ header {
         margin-right: 10px;
         display: inline-flex;
         align-items: center;
-        background-color: rgba(237, 237, 237, .5);
+        background-color: var(--shade);
         padding: 1.5%;
         border-radius: 25px;
 
